# restate

./: Cargo.toml  justfile
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/commands/: whoami.rs
crates/admin/: Cargo.toml
crates/bifrost/: Cargo.toml
crates/core/: Cargo.toml
crates/encoding/derive/: Cargo.toml
crates/fs-util/: Cargo.toml
crates/futures-util/: Cargo.toml
crates/invoker-api/: Cargo.toml
crates/log-server/: Cargo.toml
crates/metadata-server/: Cargo.toml
crates/metadata-server-grpc/: Cargo.toml
crates/node/: Cargo.toml
crates/node/src/: lib.rs
crates/node/src/network_server/: grpc_svc_handler.rs
crates/partition-store/: Cargo.toml
crates/rocksdb/: Cargo.toml
crates/serde-util/: Cargo.toml
crates/service-client/: Cargo.toml
crates/service-protocol/: Cargo.toml
crates/storage-api/: Cargo.toml
crates/storage-query-datafusion/: Cargo.toml
crates/storage-query-postgres/: Cargo.toml
crates/timer/: Cargo.toml
crates/tracing-instrumentation/: Cargo.toml
crates/types/: Cargo.toml
crates/types/src/config/: admin.rs  bifrost.rs  common.rs  metadata_server.rs  mod.rs
crates/types/src/logs/: metadata.rs
crates/utoipa/: Cargo.toml
server/: Cargo.toml
tools/bifrost-benchpress/: Cargo.toml
tools/mock-service-endpoint/: Cargo.toml
tools/restatectl/: Cargo.toml
tools/xtask/: Cargo.toml
