[package]
name = "restate-log-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[features]
default = []
clients = []
test-util = []

[dependencies]
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

restate-bifrost = { workspace = true }
restate-core = { workspace = true }
restate-rocksdb = { workspace = true }
restate-types = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
codederror = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
metrics = { workspace = true }
rocksdb = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
static_assertions = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
tonic = { workspace = true, features = ["transport", "codegen", "prost", "gzip"] }
tracing = { workspace = true }
prost = { workspace = true }
prost-dto = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
restate-bifrost = { workspace = true, features = ["test-util"] }
restate-core = { workspace = true, features = ["test-util"] }
restate-metadata-server = { workspace = true }
restate-types = { workspace = true, features = ["test-util"] }

googletest = { workspace = true }
test-log = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[package.metadata.cargo-machete]
ignored = ["workspace-hack", "tonic-build"]