[package]
name = "bifrost-benchpress"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[features]
default = []
console = [
    "tokio/full",
    "tokio/tracing",
    "restate-tracing-instrumentation/console-subscriber",
]

[dependencies]
restate-bifrost = { workspace = true, features = ["memory-loglet", "local-loglet"] }
restate-core = { workspace = true, features = ["test-util"] }
restate-errors = { workspace = true }
restate-metadata-server = { workspace = true }
restate-rocksdb = { workspace = true }
restate-tracing-instrumentation = { workspace = true, features = ["rt-tokio"] }
restate-types = { workspace = true, features = ["test-util", "clap"] }

anyhow = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, features = ["derive", "env", "color", "help", "wrap_help", "usage", "suggestions", "error-context", "std"] }
codederror = { workspace = true }
futures = { workspace = true }
hdrhistogram = { version = "7.5.4" }
metrics-exporter-prometheus = { workspace = true }
quanta = { version = "0.12.3" }
rlimit = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { workspace = true, features = ["unprefixed_malloc_on_supported_platforms"] }

[package.metadata.cargo-machete]
ignored = ["workspace-hack"]